// Vitest Snapshot v1

exports[`Overlay > Overlay baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-255855c8=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      基础遮罩
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-255855c8=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      内嵌内容的遮罩
      
    </span>
  </button>
  <transition-stub
    appear="false"
    css="true"
    data-v-255855c8=""
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-255855c8=""
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay t-overlay--transparent"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      <div
        class="box"
        data-v-255855c8=""
      />
      
    </div>
  </transition-stub>
  
</div>
`;

exports[`Overlay > Overlay mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Overlay 遮罩层
  </h1>
  <p
    class="summary"
  >
    通过遮罩层，可以强调部分内容
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      基础遮罩层
    </p>
    
    <div
      class="demo-block"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-255855c8=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          基础遮罩
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-255855c8=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          内嵌内容的遮罩
          
        </span>
      </button>
      <transition-stub
        appear="false"
        css="true"
        data-v-255855c8=""
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
      <transition-stub
        appear="false"
        css="true"
        data-v-255855c8=""
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay t-overlay--transparent"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          <div
            class="box"
            data-v-255855c8=""
          />
          
        </div>
      </transition-stub>
      
    </div>
    
  </div>
</div>
`;
